[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["akihisa.m <akihisa.m@hacarus.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
opencv-python = "^4.6.0"
scikit-learn = "^1.2.0"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
japanize-matplotlib = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
